; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeMergejoin.c_ExecEndMergeJoin.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeMergejoin.c_ExecEndMergeJoin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"ExecEndMergeJoin: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"ending node processing\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"node processing ended\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExecEndMergeJoin(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %3 = call i32 @MJ1_printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = call i32 @ExecFreeExprContext(%struct.TYPE_9__* %6)
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ExecClearTuple(i32 %12)
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @ExecClearTuple(i32 %16)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %19 = call i32 @innerPlanState(%struct.TYPE_8__* %18)
  %20 = call i32 @ExecEndNode(i32 %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %22 = call i32 @outerPlanState(%struct.TYPE_8__* %21)
  %23 = call i32 @ExecEndNode(i32 %22)
  %24 = call i32 @MJ1_printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @MJ1_printf(i8*, i8*) #1

declare dso_local i32 @ExecFreeExprContext(%struct.TYPE_9__*) #1

declare dso_local i32 @ExecClearTuple(i32) #1

declare dso_local i32 @ExecEndNode(i32) #1

declare dso_local i32 @innerPlanState(%struct.TYPE_8__*) #1

declare dso_local i32 @outerPlanState(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
